# pixel-wars

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.json  config_prod.json  docker-compose.yml
backend/: .gitignore  Cargo.toml
backend/src/: dev.rs  lib.rs  main.rs  model.rs  routes.rs
backend/src/actors/: handler.rs  mod.rs  place_session.rs
backend/src/controller/: canvas_controller.rs  mod.rs  profile_controller.rs  session_controller.rs  subscription_controller.rs  timeout_controller.rs  websocket_controller.rs
backend/src/debug/: debug_mode.rs  mod.rs  reverse_proxy.rs
backend/src/websocket/: handler.rs  messages.rs  mod.rs  place_server.rs  place_session.rs
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.css  app.scss  main.ts
frontend/src/assets/pixel-wars/: CanvasController.ts  SubscriptionController.ts  canvas.ts  register.ts  stores.ts
frontend/src/assets/pixel-wars/utils/: createStore.ts  timeFormat.ts
frontend/src/lib/: Canvas.svelte  CanvasInfos.svelte  CanvasOverlay.svelte  ColorPicker.svelte  Icon.svelte  Logo.svelte  Overlay.svelte  TimeoutCounter.svelte
frontend/src/pages/: Home.svelte
