[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = { version = "4.8.0", default-features = false, features = [
    "macros",
    "compress-brotli",
    "compress-gzip",
    "cookies",
    "http2",
    "unicode",
    "compat",
]}
actix-web-actors = "4.3.0"
base64 = "0.22.1"
bincode = "1.3.3"
bytes = "1.6.1"
env_logger = "0.11.3"
log = "0.4.22"
redis = { version = "0.26.0", features = ["tokio-comp", "connection-manager"] }
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4"] }
