[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = { version = "4.9.0", default-features = false, features = [
    "macros",
    "compress-brotli",
    "compress-gzip",
    "cookies",
    "http2",
    "unicode",
    "compat",
]}
actix-ws = "0.3.0"
base64 = "0.22.1"
bincode = "1.3.3"
bytes = "1.7.1"
env_logger = "0.11.5"
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
log = "0.4.22"
redis = { version = "0.26.1", features = ["tokio-comp", "connection-manager"] }
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "time", "macros"] }
uuid = { version = "1.10.0", features = ["v4"] }
